--- a/MDconfig.ini
+++ b/MDconfig.ini
@@ -5,7 +5,7 @@ brokerid1=8888
 userid1=88889999
 password1=123456
 proinfo1=test1
-remark1=行情测试配置
+remark1=remark1
 instrument1=IF1906
 filepath1=D:\\marketdata\\data1.csv
 apitype2=ctp
@@ -14,7 +14,7 @@ brokerid2=8888
 userid2=88889999
 password2=123456
 proinfo2=test2
-remark2=行情测试配置
+remark2=remark2
 instrument2=IF1906
 filepath2=D:\\marketdata\\data2.csv
 //apitype可以填写两种参数，CTP的接口的请填写ctp，飞马接口的请填写femas
